[gd_scene load_steps=11 format=2]

[ext_resource path="res://units/Marine.tscn" type="PackedScene" id=1]
[ext_resource path="res://themes/lifebar_foreground_white.png" type="Texture" id=2]
[ext_resource path="res://units/circle.png" type="Texture" id=3]
[ext_resource path="res://themes/lifebar_background.png" type="Texture" id=4]
[ext_resource path="res://units/Army.gd" type="Script" id=5]
[ext_resource path="res://themes/arial.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://units/flag.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[sub_resource type="CircleShape2D" id=2]
radius = 216.0

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[node name="Army" type="KinematicBody2D" groups=[
"army",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Units" type="Node2D" parent="."]

[node name="Marine1" parent="Units" instance=ExtResource( 1 )]

[node name="Outline" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="NumOutline" type="Sprite" parent="."]
position = Vector2( 0, -101 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Health" type="TextureProgress" parent="."]
margin_left = -24.0
margin_top = -71.0
margin_right = 168.0
margin_bottom = -31.0
rect_scale = Vector2( 0.25, 0.5 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CombineArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombineArea"]
shape = SubResource( 2 )

[node name="UnitDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UnitDetection"]
polygon = PoolVector2Array( -0.994446, -2.97296, 448, -512, 1336, 0, 448, 512 )

[node name="UnitCount" type="Label" parent="."]
margin_left = -22.8002
margin_top = -115.7
margin_right = 22.1998
margin_bottom = -87.7
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag" type="Sprite" parent="."]
visible = false
position = Vector2( -54.3612, -29.6407 )
scale = Vector2( 0.198351, 0.218097 )
texture = ExtResource( 7 )
